# alignment_of_sequences_in_linear_space

./: CMakeLists.txt  README.md
include/alignment/: IAligner.hpp
src/alignment/: .hirschberg.cpp.swp  .needleman.h.swp  hirschberg.cpp  huxley  main  main.cpp  needleman  needleman.cpp  needleman.h  prog  thehuxley.cpp
src/utils/: alignment.cpp
